--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 setuptools 75.6.0
-wheel 0.45.1
 streamlit 1.41.1
+setuptools==75.6.0
+wheel==0.38.4
 pandas==1.5.3
 numpy==1.23.5
 beautifulsoup4
 requests
 altair==4.0.0
-bs4 
-
+bs4
