--- a/procfile
+++ b/procfile
@@ -1,1 +1,1 @@
-nweb: streamlit run app.py --server.port 8509 --server.address 0.0.0.0
+web: streamlit run app.py --server.port $PORT --server.address 0.0.0.0
